nav align fixed

--- a/public/master/css/style.css
+++ b/public/master/css/style.css
@@ -16,6 +16,7 @@ body{
     margin-top: 0px;
     text-align: center;
     padding-left: 15px;
+    padding-top: 0px;
 }
 .nav-link {
     color:
